--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
     "angular": "^1.5.7",
     "angular-touch": "^1.5.7",
     "angular-animate": "^1.5.7",
-    "ui-bootstrap": "^1.3.3",
-    "jquery": "^2.2.4"
+    "jquery": "^2.2.4",
+    "font-awesome": "^4.6.3"
   }
 }
