--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -25,6 +25,12 @@ rules:
         _controller: AppBundle:Main:showRules
     methods: [GET]
 
+new_game:
+    path: /new_game
+    defaults:
+        _controller: AppBundle:GameState:newGame
+    methods: [POST]
+
 angular_templates:
     path: /angular_directives/{name}
     defaults:
