update all directive js files to use FOSjsrouting

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -8,6 +8,10 @@ imports:
 parameters:
     locale: en
 
+# Routes to expose to front-end angular js files
+fos_js_routing:
+    routes_to_expose: [homepage, registration, guest_registration, rules, new_game, save_game_state, angular_templates]
+
 framework:
     #esi:             ~
     #translator:      { fallbacks: ["%locale%"] }
