add logout action

--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -8,6 +8,12 @@ login:
     defaults:
         _controller: AppBundle:Login:entry
     methods: [POST]
+    
+logout:
+    path: /logout
+    defaults:
+        _controller: AppBundle:Login:logout
+    methods: [GET]
 
 registration:
     path: /registration
