--- a/src/AppBundle/Resources/config/doctrine/Player.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Player.orm.yml
@@ -7,22 +7,14 @@ AppBundle\Entity\Player:
       type: integer
       generator: { strategy: AUTO }
   fields:
-    username:
-      type: string
-      length: 255
-      unique: true
-    password:
-      type: string
-      length: 255
     firstname:
       type: string
       length: 255
+      nullable: true
     lastname:
       type: string
       length: 255
-    email:
-      type: string
-      length: 255
+      nullable: true
   oneToMany:
     games:
       targetEntity: Game
