--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -7,4 +7,7 @@ app:
     type:     annotation
     
 fos_js_routing:
-    resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml" 
+    resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
+    
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"       
