fix onetomany mapping in game/gamestate

--- a/src/AppBundle/Resources/config/doctrine/Game.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Game.orm.yml
@@ -22,7 +22,7 @@ AppBundle\Entity\Game:
   oneToMany:
     game_states:
       targetEntity: GameState
-      mappedBy: gamestate
+      mappedBy: game
   lifecycleCallbacks:
     prePersist: [ setCreatedAtValue ]
     preUpdate: [ setUpdatedAtValue ]
