--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -38,6 +38,6 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/angular_templates/, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/angular_templates, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/, role: ROLE_ADMIN }
-        - { path: ^/, role: ROLE_USER }
+        #- { path: ^/, role: ROLE_USER }
