add firstname and lastname to registration

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -16,6 +16,9 @@ fos_user:
     db_driver: orm
     firewall_name: main
     user_class: AppBundle\Entity\Player
+    registration:
+        form:
+            type: AppBundle\Form\RegistrationType
 
 framework:
     #esi:             ~
