update player to return null for salt since using bcrypt and create registration form test

--- a/src/AppBundle/Resources/config/doctrine/Game.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Game.orm.yml
@@ -19,6 +19,7 @@ AppBundle\Entity\Game:
       joinColumn:
         name: player_id
         referencedColumnName: id
+        onDelete: CASCADE
   oneToMany:
     game_states:
       targetEntity: GameState
