--- a/src/AppBundle/Resources/config/doctrine/GameState.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/GameState.orm.yml
@@ -43,5 +43,6 @@ AppBundle\Entity\GameState:
       joinColumn:
         name: game_id
         referencedColumnName: id
+        onDelete: CASCADE
   lifecycleCallbacks:
     prePersist: [ setCreatedAtValue ]
