--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -3,7 +3,7 @@
 # http://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 parameters:
     database_url: 	   ~
-    database_host:     ~
+    database_host:     127.0.0.1
     database_port:     ~
     database_name:     symfony
     database_user:     ~
