update postgresql setup for deployment

--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,9 @@
         	"Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
         	"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache"
 		],
+		"pre-install-cmd": [
+			"AppBundle\\HerokuDatabase::populateEnvironment"
+		],
         "post-install-cmd": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
@@ -61,6 +64,11 @@
             "file": "app/config/parameters.yml",
             "env-map": {
             	"database_url": "DATABASE_URL",
+            	"database_host": "DATABASE_HOST",
+            	"database_port": "DATABASE_PORT",
+            	"database_name": "DATABASE_NAME",
+            	"database_user": "DATABASE_USER",
+            	"database_password": "DATABASE_PASSWORD"
             	"monolog_action_level": "LOG_LEVEL"
         	}
         }
