--- a/composer.json
+++ b/composer.json
@@ -68,7 +68,7 @@
             	"database_port": "DATABASE_PORT",
             	"database_name": "DATABASE_NAME",
             	"database_user": "DATABASE_USER",
-            	"database_password": "DATABASE_PASSWORD"
+            	"database_password": "DATABASE_PASSWORD",
             	"monolog_action_level": "LOG_LEVEL"
         	}
         }
