--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -18,11 +18,11 @@ doctrine:
     dbal:
         driver:   pdo_pgsql
         url:      "%database_url%"
-        #host:     "%database_host%"
-        #port:     "%database_port%"
-        #dbname:   "%database_name%"
-        #user:     "%database_user%"
-        #password: "%database_password%"
+        host:     "%database_host%"
+        port:     "%database_port%"
+        dbname:   "%database_name%"
+        user:     "%database_user%"
+        password: "%database_password%"
         charset:  UTF8
         # if using pdo_sqlite as your database driver:
         #   1. add the path in parameters.yml
