--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,9 @@
 !bin/symfony_requirements
 /vendor/
 
+# Managed by Node
+/node_modules
+
 # Assets and user uploads
 /web/bundles/
 /web/uploads/
