--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pickomino",
   "version": "1.0.0",
   "description": "Pickomino  ======================",
-  "main": "index.js",
+  "main": "",
   "dependencies": {
     "bower": "^1.7.9"
   },
