--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -10,4 +10,13 @@ fos_js_routing:
     resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
     
 fos_user:
-    resource: "@FOSUserBundle/Resources/config/routing/all.xml"       
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+    
+admin:
+    resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
+    prefix: /admin
+    
+_sonata_admin:
+    resource: .
+    type: sonata_admin
+    prefix: /admin       
