--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ services:
 before_script:
   - npm install -g grunt-cli
   - npm install -g bower
+  - npm install -g jasmine
   - npm install
   - bower install
   - psql -c 'create database symfony_pickomino;' -U postgres
@@ -20,4 +21,6 @@ before_script:
   - composer install
   - php app/console doctrine:schema:update --force
 
-script: phpunit -c app/
+script: 
+  - phpunit -c app/
+  - jasmine
