--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "sonata-project/doctrine-orm-admin-bundle": "^3.0",
         "sonata-project/core-bundle": "^3.0",
         "sonata-project/admin-bundle": "^3.4",
-        "sonata-project/cache-bundle": "^2.2"
+        "sonata-project/cache-bundle": "^2.2",
         "mouf/nodejs-installer": "~1.0"
     },
     "require-dev": {
