--- a/package.json
+++ b/package.json
@@ -16,7 +16,13 @@
     "karma-chrome-launcher": "^1.0.1",
     "karma-jasmine": "^1.0.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jasmine-core": "^2.4.1",
+    "karma": "^1.2.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.1",
+    "phantomjs": "^2.1.7"
+  },
   "scripts": {},
   "repository": {
     "type": "git",
