--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_script:
   - npm install -g bower
   - npm install -g jasmine
   - npm install -g karma
+  - npm install
   - bower install
   - psql -c 'create database symfony_pickomino;' -U postgres
   - cp app/config/parameters.yml.travis app/config/parameters.yml
