--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,6 @@ services:
 before_script:
   - npm install -g grunt-cli
   - npm install -g bower
-  - npm install -g jasmine
-  - npm install -g karma
   - npm install
   - bower install
   - psql -c 'create database symfony_pickomino;' -U postgres
@@ -24,4 +22,4 @@ before_script:
 
 script: 
   - phpunit -c app/
-  - karma start karma.conf.js --single-run
+  - node_modules/karma/bin/karma start karma.conf.js --single-run
