--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "karma": "^1.2.0",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.1",
+    "karma-spec-reporter": "0.0.26",
     "phantomjs": "^2.1.7"
   },
   "scripts": {},
