--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "devDependencies": {
     "jasmine-core": "^2.4.1",
+    "jasmine-expect": "^2.0.2",
     "karma": "^1.2.0",
     "karma-jasmine": "^1.0.2",
+    "karma-jasmine-matchers": "^2.0.2",
     "karma-phantomjs-launcher": "^1.0.1",
     "karma-spec-reporter": "0.0.26",
     "phantomjs": "^2.1.7"
