--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,5 @@ before_script:
   - php app/console doctrine:schema:update --force
 
 script: 
-  - phpunit -c app/
+  - phpunit -c --debug app/
   - node_modules/karma/bin/karma start karma.conf.js --single-run
