--- a/.travis.yml
+++ b/.travis.yml
@@ -25,3 +25,4 @@ before_script:
 script:
   - phpunit --debug -c app/
   - node_modules/karma/bin/karma start karma.conf.js --single-run
+  - sonar-scanner -Dsonar.login=$SONAR_TOKEN
